--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'maven'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'kotlin'
+
 buildscript {
     ext.kotlin_version = '1.2.51'
 
@@ -9,10 +14,10 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.17"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.2'
     }
 }
 
-apply plugin: 'kotlin'
 
 group = GROUP
 version = VERSION_NAME
@@ -35,3 +40,43 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.6"
 }
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
+    outputFormat = 'javadoc'
+    outputDirectory = javadoc.destinationDir
+}
+
+task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+ext {
+    pkgName = 'colormath'
+    pkgDesc = 'Color space conversions for Java and Kotlin'
+    githubRepo = 'github.com/ajalt/colormath'
+    pkgLicense = 'Apache-2.0'
+    pkgLicenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    devInfo = {
+        id 'ajalt'
+        name 'AJ Alt'
+        url 'https://github.com/ajalt'
+    }
+    bintrayUser = System.getenv('BINTRAY_USER')
+    bintrayKey = System.getenv('BINTRAY_API_KEY')
+    mavenUserToken = System.getenv('MAVEN_USER_TOKEN')
+    mavenUserPass = System.getenv('MAVEN_USER_PASS')
+    deployDryRun = false
+}
+
+apply from: new File(rootDir, 'deploy.gradle')
