--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,9 +33,9 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: ./gradlew mingwX64Test
 
-      - name: Run macOS tests
+      - name: Run macOS and iOS tests
         if: matrix.os == 'macOS-latest'
-        run: ./gradlew macosX64Test
+        run: ./gradlew macosX64Test tvosX64Test watchosX86Test iosX64Test
 
       - name: Bundle the build report
         if: failure()
