Add gradients sample to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,8 @@ markdown_extensions:
 
 nav:
   - 'Getting Started': index.md
-  - 'Try It Online': tryit.md
+  - 'Try It Online':
+    - 'Color converter': tryit.md
+    - 'Gradient generator': gradients.md
   - 'API Reference': api/colormath/com.github.ajalt.colormath/index.html
   - 'Releases': changelog.md
