--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: eskatos/gradle-command-action@v1
         with:
           dependencies-cache-enabled: true
-          arguments: macosX64Test tvosX64Test iosX64Test --stacktrace
+          arguments: macosX64Test macosArm64Test tvosX64Test iosX64Test --stacktrace
   windows-tests:
     runs-on: windows-latest
     steps:
