--- a/extensions/colormath-ext-android-color/src/main/AndroidManifest.xml
+++ b/extensions/colormath-ext-android-color/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest package="com.github.ajalt.colormath.extensions.android-color">
+<manifest package="com.github.ajalt.colormath.extensions.androidcolor">
 </manifest>
