--- a/extensions/colormath-ext-android-colorint/src/main/AndroidManifest.xml
+++ b/extensions/colormath-ext-android-colorint/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest package="com.github.ajalt.colormath.extensions.android-colorint">
+<manifest package="com.github.ajalt.colormath.extensions.androidcolorint">
 </manifest>
