--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
   - 'Getting Started': index.md
   - 'Usage': usage.md
   - 'Color Spaces': colorspaces.md
+  - 'Extensions': extensions.md
   - 'Try It Online':
     - 'Color converter': converter.md
     - 'Gradient generator': gradient.md
