--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,7 +50,7 @@ jobs:
       - uses: eskatos/gradle-command-action@v1
         with:
           dependencies-cache-enabled: true
-          arguments: mingwX64Test --stacktrace
+          arguments: mingwX64Test :colormath:mingwX64BackgroundTest --stacktrace
 
   deploy-mac-and-linux:
     needs: [ linux-tests, macos-tests, windows-tests ]
