--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           arguments: mingwX64Test :colormath:mingwX64BackgroundTest --stacktrace
 
-  deploy-mac-and-linux:
+  deploy:
     needs: [ linux-tests, macos-tests, windows-tests ]
     runs-on: macos-latest
     steps:
@@ -64,20 +64,6 @@ jobs:
         with:
           arguments: publish -PinferVersion=true
 
-  deploy-windows:
-    needs: [ linux-tests, macos-tests, windows-tests ]
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Fetch git tags
-        run: git fetch origin +refs/tags/*:refs/tags/*
-      - name: Deploy to sonatype
-        uses: eskatos/gradle-command-action@v2
-        with:
-          arguments: :colormath:publishMingwX64PublicationToMavenRepository -PinferVersion=true
 
 env:
   GRADLE_OPTS: -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=true -Dkotlin.incremental=false -Dorg.gradle.project.kotlin.incremental.multiplatform=false -Dorg.gradle.project.kotlin.native.disableCompilerDaemon=true -Dorg.gradle.jvmargs="-Xmx5g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
