--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 VERSION_NAME=3.2.0
 
+kotlin.mpp.stability.nowarn=true
+
 # work around for compose-web bug KT-48273
 kotlin.js.webpack.major.version=4
 
