--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
           java-version: 11
       - uses: eskatos/gradle-command-action@v2
         with:
-          arguments: mingwX64Test :colormath:mingwX64BackgroundTest --stacktrace
+          arguments: mingwX64Test --stacktrace
 
   deploy:
     needs: [ linux-tests, macos-tests, windows-tests ]
