Update source layout to 1.8 style

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ kotlin.mpp.stability.nowarn=true
 kotlin.js.webpack.major.version=4
 
 android.useAndroidX=true
+
+# https://kotlinlang.org/docs/whatsnew18.html#configuration-and-setup
+kotlin.mpp.androidSourceSetLayoutVersion=2
