--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,9 +12,10 @@ jobs:
   linux-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 11
       - uses: eskatos/gradle-command-action@v2
         with:
@@ -31,9 +32,10 @@ jobs:
   macos-tests:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 11
       - uses: eskatos/gradle-command-action@v2
         with:
@@ -41,9 +43,10 @@ jobs:
   windows-tests:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 11
       - uses: eskatos/gradle-command-action@v2
         with:
@@ -53,9 +56,10 @@ jobs:
     needs: [ linux-tests, macos-tests, windows-tests ]
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 11
       - name: Fetch git tags
         run: git fetch origin +refs/tags/*:refs/tags/*
