Switch to gradle-maven-publish plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,24 @@
 VERSION_NAME=3.2.1
 
 kotlin.mpp.stability.nowarn=true
-
 android.useAndroidX=true
 
 # https://kotlinlang.org/docs/whatsnew18.html#configuration-and-setup
 kotlin.mpp.androidSourceSetLayoutVersion=2
+
+# gradle-maven-publish configuration
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+GROUP=com.github.ajalt.colormath
+POM_DESCRIPTION=Multiplatform color space conversions for Kotlin
+POM_INCEPTION_YEAR=2021
+POM_URL=https://github.com/ajalt/colormath/
+POM_LICENSE_NAME=The MIT License
+POM_LICENSE_URL=https://opensource.org/licenses/MIT
+POM_LICENSE_DIST=repo
+POM_SCM_URL=https://github.com/ajalt/colormath/
+POM_SCM_CONNECTION=scm:git:git://github.com/ajalt/colormath.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ajalt/colormath.git
+POM_DEVELOPER_ID=ajalt
+POM_DEVELOPER_NAME=AJ Alt
+POM_DEVELOPER_URL=https://github.com/ajalt/
