--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,15 @@ jobs:
           java-version: 20
       - uses: gradle/gradle-build-action@v2
         with:
-          arguments: :colormath:check :extensions:colormath-ext-jetpack-compose:check :extensions:colormath-ext-android-colorint:check :extensions:colormath-ext-android-color:check --stacktrace
+          arguments: |
+            :colormath:jsNodeTest
+            :colormath:jvmTest
+            :colormath:linuxX64Test
+            :colormath:compileKotlinLinuxArm64
+            :extensions:colormath-ext-jetpack-compose:check
+            :extensions:colormath-ext-android-colorint:check
+            :extensions:colormath-ext-android-color:check
+            --stacktrace
       - name: Bundle the build report
         if: failure()
         run: find . -type d -name 'reports' | zip -@ -r build-reports.zip
@@ -39,7 +47,15 @@ jobs:
           java-version: 20
       - uses: gradle/gradle-build-action@v2
         with:
-          arguments: macosX64Test :colormath:compileKotlinMacosArm64 iosX64Test tvosX64Test iosSimulatorArm64Test tvosSimulatorArm64Test watchosSimulatorArm64Test --stacktrace
+          arguments: |
+            macosX64Test
+            :colormath:compileKotlinMacosArm64
+            iosX64Test
+            tvosX64Test
+            iosSimulatorArm64Test
+            tvosSimulatorArm64Test
+            watchosSimulatorArm64Test
+            --stacktrace
   windows-tests:
     runs-on: windows-latest
     steps:
@@ -72,14 +88,20 @@ jobs:
             :extensions:colormath-ext-android-colorint:assemble 
             :extensions:colormath-ext-jetpack-compose:assemble 
             :colormath:publish
-            :extensions:colormath-ext-android-color:publish 
-            :extensions:colormath-ext-android-colorint:publish 
+            :extensions:colormath-ext-android-color:publish
+            :extensions:colormath-ext-android-colorint:publish
             :extensions:colormath-ext-jetpack-compose:publish
             -PinferVersion=true
 
-
 env:
-  GRADLE_OPTS: -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=true -Dkotlin.incremental=false -Dorg.gradle.project.kotlin.incremental.multiplatform=false -Dorg.gradle.project.kotlin.native.disableCompilerDaemon=true -Dorg.gradle.jvmargs="-Xmx5g -Dfile.encoding=UTF-8"
+  GRADLE_OPTS: >
+    -Dorg.gradle.configureondemand=true
+    -Dorg.gradle.parallel=true
+    -Dkotlin.incremental=false
+    -Dorg.gradle.project.kotlin.incremental.multiplatform=false
+    -Dorg.gradle.project.kotlin.native.disableCompilerDaemon=true
+    -Dorg.gradle.jvmargs="-Xmx5g
+    -Dfile.encoding=UTF-8"
   ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralPassword }}
   ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_signingInMemoryKey }}
   ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralUsername }}
