--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -94,14 +94,7 @@ jobs:
             -PinferVersion=true
 
 env:
-  GRADLE_OPTS: >
-    -Dorg.gradle.configureondemand=true
-    -Dorg.gradle.parallel=true
-    -Dkotlin.incremental=false
-    -Dorg.gradle.project.kotlin.incremental.multiplatform=false
-    -Dorg.gradle.project.kotlin.native.disableCompilerDaemon=true
-    -Dorg.gradle.jvmargs="-Xmx5g
-    -Dfile.encoding=UTF-8"
+  GRADLE_OPTS: -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=true -Dkotlin.incremental=false -Dorg.gradle.project.kotlin.incremental.multiplatform=false -Dorg.gradle.project.kotlin.native.disableCompilerDaemon=true -Dorg.gradle.jvmargs="-Xmx5g -Dfile.encoding=UTF-8"
   ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralPassword }}
   ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_signingInMemoryKey }}
   ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralUsername }}
