--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ VERSION_NAME=3.4.0
 kotlin.mpp.stability.nowarn=true
 android.useAndroidX=true
 
+org.jetbrains.compose.experimental.wasm.enabled=true
+
 # https://kotlinlang.org/docs/whatsnew18.html#configuration-and-setup
 kotlin.mpp.androidSourceSetLayoutVersion=2
 
