Update publishing plugin

--- a/extensions/colormath-ext-android-color/gradle.properties
+++ b/extensions/colormath-ext-android-color/gradle.properties
@@ -1,2 +1,2 @@
 POM_ARTIFACT_ID=colormath-ext-android-color
-POM_NAME=Andoird Color Extensions for Colormath
+POM_NAME=Android Color Extensions for Colormath
