--- a/extensions/colormath-ext-android-colorint/gradle.properties
+++ b/extensions/colormath-ext-android-colorint/gradle.properties
@@ -1,2 +1,2 @@
 POM_ARTIFACT_ID=colormath-ext-android-colorint
-POM_NAME=Andoird ColorInt Extensions for Colormath
+POM_NAME=Android ColorInt Extensions for Colormath
