--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ kotlin.mpp.androidSourceSetLayoutVersion=2
 
 # gradle-maven-publish configuration
 SONATYPE_HOST=DEFAULT
-RELEASE_SIGNING_ENABLED=true
+#RELEASE_SIGNING_ENABLED=true
 GROUP=com.github.ajalt.colormath
 POM_DESCRIPTION=Multiplatform color space conversions for Kotlin
 POM_INCEPTION_YEAR=2021
