--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,12 +66,10 @@ jobs:
           path: build-reports.zip
   publish:
     needs: test
-    runs-on: macos-latest
+    runs-on: macos-14
     if: ${{ github.ref == 'refs/heads/master' && github.repository == 'ajalt/colormath' }}
     steps:
       - uses: actions/checkout@v4
-      - name: Fetch git tags
-        run: git fetch origin +refs/tags/*:refs/tags/*
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
@@ -80,7 +78,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
         with:
           # disable configuration cache due to https://github.com/gradle/gradle/issues/22779
-          arguments: publishToMavenCentral -PinferVersion=true --no-configuration-cache
+          arguments: publishToMavenCentral -PsnapshotVersion=true --no-configuration-cache
     env:
       ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_mavenCentralPassword }}
       ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_signingInMemoryKey }}
