--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         include:
           - os: ubuntu-latest
             GRADLE_ARGS: |
+              apiCheck
               :test:check
               :colormath:compileKotlinLinuxArm64
               :colormath:compileKotlinWasmJs
