--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ robolectric =  "org.robolectric:robolectric:4.10"
 [plugins]
 dokka = "org.jetbrains.dokka:1.9.10"
 publish = "com.vanniktech.maven.publish:0.27.0"
+kotlinBinaryCompatibilityValidator = "org.jetbrains.kotlinx.binary-compatibility-validator:0.14.0"
+
 # used in extensions
 android-library = "com.android.library:7.4.0"
 
