--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 kotlin = "1.9.21"
 compose = "1.6.0"
+compose-plugin = "1.6.0"
 
 [libraries]
 
@@ -13,8 +14,13 @@ kotest =  "io.kotest:kotest-assertions-core:5.8.0"
 junit =  "junit:junit:4.13.2"
 robolectric =  "org.robolectric:robolectric:4.10"
 
+# used in samples
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
+
+
 [plugins]
-dokka = "org.jetbrains.dokka:1.9.10"
+dokka = "org.jetbrains.dokka:1.9.20"
 publish = "com.vanniktech.maven.publish:0.27.0"
 kotlinBinaryCompatibilityValidator = "org.jetbrains.kotlinx.binary-compatibility-validator:0.14.0"
 
@@ -22,4 +28,4 @@ kotlinBinaryCompatibilityValidator = "org.jetbrains.kotlinx.binary-compatibility
 android-library = "com.android.library:7.4.0"
 
 # used in samples
-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
