--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
-VERSION_NAME=3.6.0
+VERSION_NAME=3.6.1
 kotlin.mpp.stability.nowarn=true
 android.useAndroidX=true
 
 org.jetbrains.compose.experimental.wasm.enabled=true
+kotlin.native.enableKlibsCrossCompilation=true
 
 # https://kotlinlang.org/docs/whatsnew18.html#configuration-and-setup
 kotlin.mpp.androidSourceSetLayoutVersion=2
