--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: 21
-      - uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/setup-gradle@v4
       - run: ./gradlew ${{matrix.GRADLE_ARGS}}
       - name: Upload the build report
         if: failure()
@@ -58,7 +58,7 @@ jobs:
           path: '**/build/reports'
   publish:
     needs: test
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master' && github.repository == 'ajalt/colormath' }}
     steps:
       - uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: 21
-      - uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/setup-gradle@v4
       - name: Deploy to sonatype
         # disable configuration cache due to https://github.com/gradle/gradle/issues/22779
         run: ./gradlew publishToMavenCentral -PsnapshotVersion=true --no-configuration-cache
